(#1188) Upgrade to JDK 11